--- a/src/show_result/CMakeLists.txt
+++ b/src/show_result/CMakeLists.txt
@@ -6,18 +6,18 @@ SHARED
 show_result.cpp # 目前只有一个.cpp 文件，就这样写了
 )
 
-# 指定这个动态库包含的目录
-# target_include_directories(${PROJECT_NAME}
-# PUBLIC
-# ${Process_Dir}
-# )
+target_link_libraries(${PROJECT_NAME}
+PUBLIC
+easyx # 动态库(libeasyx.a)
+)
 
-# target_link_libraries(${PROJECT_NAME}
-# PUBLIC
-# process # 动态库
-# )
+# 指定这个动态库包含的目录
+target_include_directories(${PROJECT_NAME}
+PUBLIC
+${Process_Dir}
+)
 
 target_link_libraries(${PROJECT_NAME}
 PUBLIC
-easyx # 动态库
+process # 动态库
 )
